--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "next": "14.2.7",
     "openai": "^4.57.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sentiment": "^5.0.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
